# hda2040

./: LICENSE  README.md
hardware/PROTO1/: 1-PCB_PCB_hda_devboard.json  1-Schematic_hda_devboard.json
hardware/PROTO1/pcba/: BOM_hda_devboard_2025-12-26.csv  PickAndPlace_PCB_hda_devboard_2025-12-26.csv
software/: CMakeLists.txt  main.c  pio_hda_clk.pio  run.sh
